--- a/client/src/navbar/blognav.css
+++ b/client/src/navbar/blognav.css
@@ -1,4 +1,38 @@
-/* FILEPATH: /c:/Users/Asus/Documents/portfolio/blog/front-end/src/navbar/blognav.css */
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+.navbar {
+    background-color: #90cdf4; /* Blue-200 color */
+}
+
+.navbar .container {
+    max-width: 1000px; /* max-w-7xl equivalent */
+    margin: 0 auto; /* mx-auto equivalent */
+    padding: 0 40px; /* px-4 sm:px-6 lg:px-8 equivalent */
+}
+
+.navbar .flex {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 64px; /* h-16 equivalent */
+}
+
+.navbar .menu {
+    display: flex;
+    align-items: baseline;
+    gap: 30px; /* space-x-4 equivalent */
+}
+
+.navbar .menu a {
+    padding: 8px 12px; /* px-3 py-2 equivalent */
+    border-radius: 4px; /* rounded-md equivalent */
+    font-size: 14px; /* text-sm equivalent */
+    font-weight: 500; /* font-medium equivalent */
+    color: #1a202c; /* text-black-300 equivalent */
+    text-decoration: none;
+    transition: background-color 0.3s, color 0.3s;
+}
+
+.navbar .menu a:hover,
+.navbar .menu a.active {
+    background-color: #2b6cb0; /* bg-blue-700 equivalent */
+    color: #fff; /* text-white equivalent */
+}
